# contest-platform

./: .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  Pipfile  README.md  docker-compose.yml  package-lock.json  run-tests.sh  run-win.sh  run.sh  run_tests.sh  script.sql  tests-lin.sh  tests-win.sh  win-tests.sh
backend/: db.sqlite3  entrypoint.sh  entrypoint_worker.sh  manage.py  pyproject.toml  requirements.txt  run.sh  update_statuses.py  yacron_jobs.yml
backend/backend/: .env  middleware.py  settings.py  urls.py
backend/contest_platform/: admin.py  apps.py  models.py  permissions.py  serializer.py  serializers.py  tasks.py  urls.py  views.py
backend/contest_platform/csv_import/: import_schools_csv.py
backend/contest_platform/migrations/: 0001_initial.py  0002_address_alter_contest_date_start_assessmentcriterion_and_more.py  0002_contest_date_end_contest_date_start_and_more.py  0002_contest_description.py  0003_alter_contest_title.py  0003_delete_user.py  0003_user_is_jury.py  0004_person_remove_entry_contestant_name_and_more.py  0005_rename_assessmentcriterion_gradecriterion.py  0006_grade.py  0007_remove_entry_address_entry_date_submitted_and_more.py
backend/contest_platform/templates/: certificate.html
backend/contest_platform/utils/: import_schools_csv.py
backend/locust-performance/: locust-tasks.py
backend/tests/: test_settings.py
backend/tests/integration/: test_login.py
backend/tests/models/: test_address_model.py  test_contest_model.py  test_entry_model.py
backend/tests/permission/: test_contest_permissions.py  test_entry_permissions.py  test_grade_permissions.py  test_user_permissions.py
backend/tests/serializers/: test_contest_serializer.py  test_entry_serializer.py  test_user_serializer.py
backend/tests/tasks/: test_send_email_task.py
data/: script.sql
frontend/: .env  (+5 more)
(+77 files in other folders)
